tests/rustdoc-ui/doctest/check-attr-test.stderr
error: unknown attribute `compile-fail`
 --> $DIR/check-attr-test.rs:5:1
  |
5 | / /// foo
6 | | ///
7 | | /// ```compile-fail,compilefail,comPile_fail
8 | | /// boo
9 | | /// ```
  | |_______^
  |
  = help: use `compile_fail` to invert the results of this test, so that it passes if it cannot be compiled and fails if it can
  = help: this code block may be skipped during testing, because unknown attributes are treated as markers for code samples written in other programming languages, unless it is also explicitly marked as `rust`
note: the lint level is defined here
 --> $DIR/check-attr-test.rs:3:9
  |
3 | #![deny(rustdoc::invalid_codeblock_attributes)]
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: unknown attribute `compilefail`
 --> $DIR/check-attr-test.rs:5:1
  |
5 | / /// foo
6 | | ///
7 | | /// ```compile-fail,compilefail,comPile_fail
8 | | /// boo
9 | | /// ```
  | |_______^
  |
  = help: use `compile_fail` to invert the results of this test, so that it passes if it cannot be compiled and fails if it can
  = help: this code block may be skipped during testing, because unknown attributes are treated as markers for code samples written in other programming languages, unless it is also explicitly marked as `rust`

error: unknown attribute `comPile_fail`
 --> $DIR/check-attr-test.rs:5:1
  |
5 | / /// foo
6 | | ///
7 | | /// ```compile-fail,compilefail,comPile_fail
8 | | /// boo
9 | | /// ```
  | |_______^
  |
  = help: use `compile_fail` to invert the results of this test, so that it passes if it cannot be compiled and fails if it can
  = help: this code block may be skipped during testing, because unknown attributes are treated as markers for code samples written in other programming languages, unless it is also explicitly marked as `rust`

error: unknown attribute `should-panic`
  --> $DIR/check-attr-test.rs:12:1
   |
12 | / /// bar
13 | | ///
14 | | /// ```should-panic,shouldpanic,shOuld_panic
15 | | /// boo
16 | | /// ```
   | |_______^
   |
   = help: use `should_panic` to invert the results of this test, so that if passes if it panics and fails if it does not
   = help: this code block may be skipped during testing, because unknown attributes are treated as markers for code samples written in other programming languages, unless it is also explicitly marked as `rust`

error: unknown attribute `shouldpanic`
  --> $DIR/check-attr-test.rs:12:1
   |
12 | / /// bar
13 | | ///
14 | | /// ```should-panic,shouldpanic,shOuld_panic
15 | | /// boo
16 | | /// ```
   | |_______^
   |
   = help: use `should_panic` to invert the results of this test, so that if passes if it panics and fails if it does not
   = help: this code block may be skipped during testing, because unknown attributes are treated as markers for code samples written in other programming languages, unless it is also explicitly marked as `rust`

error: unknown attribute `shOuld_panic`
  --> $DIR/check-attr-test.rs:12:1
   |
12 | / /// bar
13 | | ///
14 | | /// ```should-panic,shouldpanic,shOuld_panic
15 | | /// boo
16 | | /// ```
   | |_______^
   |
   = help: use `should_panic` to invert the results of this test, so that if passes if it panics and fails if it does not
   = help: this code block may be skipped during testing, because unknown attributes are treated as markers for code samples written in other programming languages, unless it is also explicitly marked as `rust`

error: unknown attribute `no-run`
  --> $DIR/check-attr-test.rs:19:1
   |
19 | / /// foobar
20 | | ///
21 | | /// ```no-run,norun,nO_run
22 | | /// boo
23 | | /// ```
   | |_______^
   |
   = help: use `no_run` to compile, but not run, the code sample during testing
   = help: this code block may be skipped during testing, because unknown attributes are treated as markers for code samples written in other programming languages, unless it is also explicitly marked as `rust`

error: unknown attribute `norun`
  --> $DIR/check-attr-test.rs:19:1
   |
19 | / /// foobar
20 | | ///
21 | | /// ```no-run,norun,nO_run
22 | | /// boo
23 | | /// ```
   | |_______^
   |
   = help: use `no_run` to compile, but not run, the code sample during testing
   = help: this code block may be skipped during testing, because unknown attributes are treated as markers for code samples written in other programming languages, unless it is also explicitly marked as `rust`

error: unknown attribute `nO_run`
  --> $DIR/check-attr-test.rs:19:1
   |
19 | / /// foobar
20 | | ///
21 | | /// ```no-run,norun,nO_run
22 | | /// boo
23 | | /// ```
   | |_______^
   |
   = help: use `no_run` to compile, but not run, the code sample during testing
   = help: this code block may be skipped during testing, because unknown attributes are treated as markers for code samples written in other programming languages, unless it is also explicitly marked as `rust`

error: unknown attribute `test-harness`
  --> $DIR/check-attr-test.rs:26:1
   |
26 | / /// b
27 | | ///
28 | | /// ```test-harness,testharness,tesT_harness
29 | | /// boo
30 | | /// ```
   | |_______^
   |
   = help: use `test_harness` to run functions marked `#[test]` instead of a potentially-implicit `main` function
   = help: this code block may be skipped during testing, because unknown attributes are treated as markers for code samples written in other programming languages, unless it is also explicitly marked as `rust`

error: unknown attribute `testharness`
  --> $DIR/check-attr-test.rs:26:1
   |
26 | / /// b
27 | | ///
28 | | /// ```test-harness,testharness,tesT_harness
29 | | /// boo
30 | | /// ```
   | |_______^
   |
   = help: use `test_harness` to run functions marked `#[test]` instead of a potentially-implicit `main` function
   = help: this code block may be skipped during testing, because unknown attributes are treated as markers for code samples written in other programming languages, unless it is also explicitly marked as `rust`

error: unknown attribute `tesT_harness`
  --> $DIR/check-attr-test.rs:26:1
   |
26 | / /// b
27 | | ///
28 | | /// ```test-harness,testharness,tesT_harness
29 | | /// boo
30 | | /// ```
   | |_______^
   |
   = help: use `test_harness` to run functions marked `#[test]` instead of a potentially-implicit `main` function
   = help: this code block may be skipped during testing, because unknown attributes are treated as markers for code samples written in other programming languages, unless it is also explicitly marked as `rust`

error: aborting due to 12 previous errors

